# article.cell-sedimentation

./: .gitignore  CMakeLists.txt  README.adoc
doc/arvo2025/: abstract.tex  biblio.bib  figure_abstract.tex  tab_validation.tex  tab_wss.tex
src/: CMakeLists.txt  bc-velocity.json  eye.cfg  eye.json  initial_condition.json  main.cpp  mesh.json  pc_lsc.cfg  pc_simple.cfg  post_process.json  run.slurm  run_rotation.slurm  ts.cfg
